[package]
name = "snawly"
version = "0.5.0"
edition = "2024"
resolver = "3"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
constcat = "0.6.1"
convert_case = "0.11.0"
fancy-regex = "0.18"
futures-concurrency = "7.7.1"
macro_rules_attribute = "0.2.2"
phf = { version = "0.13.1", features = ["macros"] }
smol = "2.0.2"
smol-macros = "0.1.1"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-csv = "*"
tree-sitter-dot = "0.1.6"
tree-sitter-highlight = "0.26.9"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
tree-sitter-rstml = "2.0.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[patch.crates-io]
tree-sitter-csv = { path = "../../dev/tree-sitter/tree-sitter-csv" }
tree-sitter-dot = { path = "../../dev/tree-sitter/tree-sitter-dot" }
tree-sitter-rstml = { path = "../../dev/tree-sitter/tree-sitter-rstml" }
tree-sitter-toml = { path = "../../dev/tree-sitter/tree-sitter-toml" }
